--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body id="body"> 
 <div class="themediv"><button onclick="AydinlikTema();"><img height="40"src="https://cdn3.emoji.gg/emojis/8862-sun.png"></button> <button onclick="KaranlikTema();"><img height="40" src="https://cdn3.emoji.gg/emojis/4990-moon.png"></button></div>
 <h1 class="wctext">
-<img id="image" height="100" src="https://cdn.glitch.global/5568a471-76ea-4e08-86b4-9e59fc42c2b0/lorex_modblack.png?v=1649615862570"><br>
+<img id="image" height="100" src="https://cdn3.emoji.gg/emojis/4009-white-crown.png"><br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span id="yazi">Hoş geldiniz.</span>
 <br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span id="yazi2">Medusa Geliştiricileri </span>
@@ -47,12 +47,12 @@
 .qq {
     text-align: center; 
     font-family:Arial, Helvetica, sans-serif;
-    color:#19181c;
+    color:white;
 }
 .wctext {
     text-align: center; 
     font-family:arial;
-    color:#19181c;
+    color:white;
 }
 .themediv {
 text-align: right;
