--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title></title>
 <meta charset="utf-8">
 </head>
-<body id="body"> 
+<body bgcolor="#19181c" id="body"> 
 <div class="themediv"><button onclick="AydinlikTema();"><img height="40"src="https://cdn3.emoji.gg/emojis/8862-sun.png"></button> <button onclick="KaranlikTema();"><img height="40" src="https://cdn3.emoji.gg/emojis/4990-moon.png"></button></div>
 <h1 class="wctext">
 <img id="image" height="100" src="https://cdn3.emoji.gg/emojis/4009-white-crown.png"><br>
