--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title></title>
+<title>Medusa Authors</title>
 <meta charset="utf-8">
 </head>
 <body bgcolor="#19181c" id="body"> 
