--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@ text-align: right;
 }
 button{background:transparent ;border:none;cursor:pointer;}
 a{color:#007fff;text-decoration: none;}
-a:hover{transition:0.5s;color:#00ff15;}
-a:href{color:#00ff15;}
+a:hover{transition:0.5s;color:red;}
+a:href{color:red;}
 </style>
 </body>
 </html>
