--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 <body bgcolor="#19181c">
 <br><br><br>
 <center>
-<span class="beckett">asqcoffee</span>
+<span class="beckett">lorex</span>
 <br>
-<span class="span">Free profile pictures.</span>
+<span class="span">Welcome.</span>
 <div class="images">
 <div class="image">
 </div>
