--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>asqcoffee</title>
+<title>lorex</title>
 <link rel="icon" href="https://cdn3.emoji.gg/emojis/6278-janky-coffee.png" type="image/x-icon" />
 <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>    
