--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
 <body bgcolor="#19181c">
 <br><br><br>
 <center>
-<span class="beckett">lorex</span>
+<span class="beckett">whoislorex</span>
 <br>
-<span class="span">Welcome.</span>
+<span class="span">Welcome to my blog.</span>
+<br>
+<a href="">Discord Fake Token Generator.</a>
 <div class="images">
 <div class="image">
 </div>
@@ -31,7 +33,7 @@
       25%, 75%   { text-shadow:0 0 8px blue,0 0 8px blue;color:blue;}
 }
 a {
-    color:white;
+    color:#007fff;
     font-family:"Roboto", sans-serif;
 }
 .beckett {
