--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 <span class="beckett">whoislorex</span>
 <br>
 <span class="span">Welcome to my blog.</span>
+<hr width="200" color="gray">
 <br>
-<a href="">Discord Fake Token Generator.</a>
+<a href=""><b>Discord Fake Token Generator.</b></a>
 <div class="images">
 <div class="image">
 </div>
