--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <br>
 <hr width="200" color="gray">
 <br>
-<a href=""><b>Discord Fake Token Generator.</b></a>
+<a href="/bin"><b>Search844 BETA</b></a>
 <div class="images">
 <div class="image">
 </div>
